# FHIRPathMappingLanguage

mapper/: pyproject.toml
mapper/mapper/: cli.py
mapper/repeatable/: fhirpathmap.json  output.json
mapper/simple/: fhirpathmap.json  output.json  qr.json
mapper/tests/: test_evaluate.py
